# WEB_HW_12

./: README.md  config.ini  main.py  pyproject.toml
migrations/: env.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  search.py  users.py
src/routes/: auth.py  contacts.py  search.py
src/services/: auth.py
